layout issues ...

--- a/app/assets/stylesheets/schoolmaster.css.scss
+++ b/app/assets/stylesheets/schoolmaster.css.scss
@@ -31,6 +31,7 @@
       text-decoration: none;
   }
   float: left;
+  width: 41em;
 }
 
 #navigation #login { 
@@ -38,7 +39,7 @@
       color: #FFFFFF;
       text-decoration: none;
   }
-  margin-left: 27em;
+  margin-left: 42em;
   text-align: right;
 }
 
